static/src/css/main.css
/* ... */
.category-item:hover {
	background-color: var(--fill-hover);
	cursor: pointer;
}

.category-item > div {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
}

.category-item-icon {
	width: 20px;
	margin-right: 18px;
	opacity: var(--opacity);
}

.category-item.active {
	color: #7a539e;
	font-weight: 600;
	background-color: #fce8e6;
}

.category-item-active:hover {
	background-color: #fce8e6;
}

.category-item.active .category-item-icon {
	fill: #7a539e;
	opacity: 1;
}




.category-title {
	font-family: var(--font-sec);
	color: var(--grey);
	font-size: 0.875rem;
	font-weight: 500;
	letter-spacing: 0.25px;
	padding: 0 12px 0 26px;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	margin: 10px 0;
}


.btn-icon-sidebar.btn-icon-sm.active {
	opacity: 1;
}

/* ==== BODY ==== */

.mail_inbox {
	grid-column: 2 / 3;
	grid-row: 2 / -1;
	height: calc(100vh - 64px);
	overflow: hidden;
}

/* ==== MAIL ==== */

.inbox-menu {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-flow: row;
	flex-flow: row;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
	height: 48px;
	width: auto;
	background-color: white;
	padding: 0 12px;
	border-bottom: 1px solid var(--fill-border);
	margin-right: 16px;
}

.inbox-container {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-flow: column;
	flex-flow: column;
	height: calc(100vh - 112px);
	min-height: 0;
}

.inbox-menu-group {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-flow: row;
	flex-flow: row;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	vertical-align: middle;
	gap: 4px;
}

.toolbar-btn {
	width: 36px;
	height: 36px;
	border-radius: 18px;
	display: inline-flex;
	align-items: center;
	justify-content: center;
	padding: 0;
}

.toolbar-btn i {
	font-size: 15px;
	color: var(--light-grey);
}

.toolbar-btn:disabled {
	opacity: 0.35;
	cursor: default;
}

.open-mail-toolbar {
	margin-right: 0;
	padding-left: 0;
}

.inbox-btn-group {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	padding: 0;
}

.inbox-menu-pagination {
	font-family: var(--font);
	color: var(--light-grey);
	font-size: 0.75rem;
	margin-right: 12px;
	letter-spacing: 0.25px;
	margin: 0 6px;
}

.inbox-menu-pagination-btn {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
}

.inbox-menu-pagination-btn .btn-pagination {
	margin: 0;
}

.inbox-category {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-flow: row nowrap;
	flex-flow: row nowrap;
	-webkit-box-pack: start;
	-ms-flex-pack: start;
	justify-content: flex-start;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	height: 56px;
	color: var(--light-grey);
	font-family: var(--font-sec);
	font-weight: 500;
	font-size: 0.875rem;
	letter-spacing: 0.25px;
	white-space: nowrap;
	border-bottom: 1px solid var(--fill-border);
	overflow: hidden;
	margin-right: 16px;
}

.inbox-category-item {
	position: relative;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	height: 56px;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	cursor: pointer;
	-webkit-box-flex: 0;
	-ms-flex: 0 1 251px;
	flex: 0 1 251px;
}

.inbox-category-title {
	margin-right: 18px;
	padding: 0;
}

.inbox-category-icon {
	margin-left: 16px;
	margin-right: 12px;

	-webkit-transition: opacity 350ms ease;

	-o-transition: opacity 350ms ease;

	transition: opacity 350ms ease;
}

.inbox-category-item:hover {
	background-color: var(--fill-hover);
	color: var(--black);
}

.inbox-category-item:hover .inbox-category-icon {
	opacity: 1;
}

.inbox-category-item.active {
	color: #7a539e;
}

.inbox-category-icon.active {
	fill: #7a539e;
	opacity: 1;
}

#ctg-primary.inbox-category-item.active::before {
	content: "";
	position: absolute;
	display: block;
	height: 4px;
	background-color: #7a539e;
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
	left: 0;
	right: 0;
	bottom: 0;
	margin: 0 8px;
}

/* ==== MAIL CONTENT ==== */

.mail-content {
	display: block;
	margin-bottom: 16px;
	flex: 1 1 auto;
	min-height: 0;
	overflow-y: auto;
	overflow-x: hidden;
	height: auto;
}

.message {
	padding: 8px 8px 24px 0;
	overflow-wrap: anywhere;
}

.mail {
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	padding-bottom: 8px;
}

.inbox-message-item {
	position: relative;
	display: flex;
	padding: 8px 4px;
	align-items: center;
	gap: 8px;
	}

.inbox-message-item:hover {
	cursor: pointer;
	-webkit-box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0,
		0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
	box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0,
		0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
	z-index: 1;
}

.inbox-message-item-options {
	display: flex;
}

.inbox-message-item-options * {
	margin: 0;
}
.img-container{
position:relative;
transition:all 0.3s linear;
padding:0px;
}
/* ... */

